# claw_game

./: CMakeLists.txt  Config.h.in  main.cpp  run_tests.sh
src/: CMakeLists.txt  README.md  block.cpp  block.hpp  block_fwd.hpp  claw_action.hpp  game.cpp  game.hpp  goal_tree.cpp  goal_tree.hpp  table.cpp  table.hpp
src/test/: CMakeLists.txt  block_test.cpp  goal_tree_test.cpp  table_test.cpp  test_utils.cpp  test_utils.hpp
